--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ featured_image: /images/social.jpg
 			<a class="portfolio-item__link" href="{{ project.url }}">
 
 				<div class="portfolio-item__image">
-					<img src="{{ project.featured_image  }}" alt="{{ project.title }}">
+					<img src="{{ site.baseurl }}{{ project.featured_image  }}" alt="{{ project.title }}">
 				</div>
 
 				<div class="portfolio-item__content">
