--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ featured_image: /images/social.jpg
 
 		<div class="portfolio-item">
 
-			<a class="portfolio-item__link" href="{{ site.baseurl }}{{ project.url }}">
+			<a class="portfolio-item__link" href="{{ project.urlcustom }}">
 
 				<div class="portfolio-item__image">
 					<img src="{{ site.baseurl }}{{ project.featured_image  }}" alt="{{ project.title }}">
