--- a/index.html
+++ b/index.html
@@ -1,37 +1,32 @@
 ---
 layout: default
-title: A minimal, fixed sidebar grid portfolio Jekyll theme.
-description: A minimal, fixed sidebar grid portfolio Jekyll theme.
+title: Photographe portrait, paysage basé à Montréal
+description: Photographe portrait, paysage basé à Montréal
 featured_image: /images/social.jpg
 ---
 
 <section class="portfolio">
+  <div class="content-wrap portfolio-wrap">
+    {% for project in site.projects reversed %}
 
-	<div class="content-wrap portfolio-wrap">
+    <div class="portfolio-item">
+      <a class="portfolio-item__link" href="{{ project.urlcustom }}">
+        <div class="portfolio-item__image">
+          <img
+            src="{{ site.baseurl }}{{ project.featured_image }}"
+            alt="{{ project.title }}"
+          />
+        </div>
 
-		{% for project in site.projects reversed %}
+        <div class="portfolio-item__content">
+          <div class="portfolio-item__info">
+            <h2 class="portfolio-item__title">{{ project.title }}</h2>
+            <p class="portfolio-item__subtitle">{{ project.subtitle }}</p>
+          </div>
+        </div>
+      </a>
+    </div>
 
-		<div class="portfolio-item">
-
-			<a class="portfolio-item__link" href="{{ project.urlcustom }}">
-
-				<div class="portfolio-item__image">
-					<img src="{{ site.baseurl }}{{ project.featured_image  }}" alt="{{ project.title }}">
-				</div>
-
-				<div class="portfolio-item__content">
-					<div class="portfolio-item__info">
-						<h2 class="portfolio-item__title">{{ project.title }}</h2>
-						<p class="portfolio-item__subtitle">{{ project.subtitle }}</p>
-					</div>
-				</div>
-
-			</a>
-
-		</div>
-
-		{% endfor %}
-
-	</div>
-
+    {% endfor %}
+  </div>
 </section>
